compiler/tests/ar/errors/extern_mod_misuse.salam
// لغة: العربية
// توقع: الخارجية
خارجي:
    مضمن دالة fabs(قیمة: عشری٦٤): عشری٦٤
نهاية

دالة الرئیسیة:
    اطبع fabs(0.0 - 1.0)
نهاية
